# pocket-book-dictionary

./: .gitignore  LICENSE  README.md  cat.txt  pyproject.toml  requirements.txt
converter/: .~lock.Instruction.rtf#  Instruction.rtf
converter/ca/: morphems.txt
converter/eng/: morphems.txt
converter/oc/: morphems.txt
converter/rus/: keyboard.txt
src/: main.py  read_dic.py
src/wpbd/: __init__.py  __main__.py  config.py  extractors.py  formatters.py  parsers.py
src/wpbd/utils/: __init__.py  logging.py  scripts.py  text.py
